Fix footer size and break on smaller screen

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -194,10 +194,9 @@ $section-padding: 2.5rem 0;
 
 #footer {
   background: $primary-color;
-  height: 2.5rem;
 
   p {
-    margin-bottom: 0;
+    margin: 0.5rem 0;
   }
 }
 
